--- a/lang_school/main/templates/main/index.html
+++ b/lang_school/main/templates/main/index.html
@@ -92,7 +92,7 @@
             <h3 class="mb-0">Featured post</h3>
             <div class="mb-1 text-body-secondary blog-date">Nov 12</div>
             <p class="card-text mb-auto">{% lorem 1 b random %}</p>
-            <a class="blog-link btn" href="#" role="button">Continue reading</a>
+            <a class="blog-link btn" href="#" role="button">Перейти к статье</a>
           </div>
           <div class="col-auto p-4 d-none d-lg-block m-auto">
             <img src="http://placehold.it/400x500/2c3e50/3498db&text=No Photo" class="bd-placeholder-img" width="200" height="250" alt="Third Slide Image">
@@ -106,7 +106,7 @@
             <h3 class="mb-0">Featured post</h3>
             <div class="mb-1 text-body-secondary blog-date">Nov 12</div>
             <p class="card-text mb-auto">{% lorem 1 b random %}</p>
-            <a class="blog-link btn" href="#" role="button">Continue reading</a>
+            <a class="blog-link btn" href="#" role="button">Перейти к статье</a>
           </div>
           <div class="col-auto p-4 d-none d-lg-block m-auto">
             <img src="http://placehold.it/400x500/2c3e50/3498db&text=No Photo" class="blog-link bd-placeholder-img" width="200" height="250" alt="Third Slide Image">
