--- a/lang_school/users/static/css/profile.css
+++ b/lang_school/users/static/css/profile.css
@@ -9,21 +9,49 @@
     --color-brown-darker: #371805;
 
     /* Exersices */
-    --color-ex-violet-main: #8106A9;
+    /* --color-ex-violet-main: #8106A9;
     --color-ex-violet-dark: #68237F;
     --color-ex-violet-darker: #54026E;
     --color-ex-violet-pale: #AF3BD4;
     --color-ex-violet-paler: #B964D4;
-    --color-ex-violet-max-pale: #D9A6EA; 
+    --color-ex-violet-max-pale: #D9A6EA; */
+    --color-violet-pastel-main: #A17DD0;
+    --color-violet-pastel-dark: #816D9C;
+    --color-violet-pastel-darker: #512987;
+    --color-violet-pastel-pale: #C0A2E8;
+    --color-violet-pastel-paler: #CBB5E8;
+    --color-violet-pastel-max-pale: #E3D6F3;
+
+    --color-pink-pastel-main: #CC73CC;
+    --color-pink-pastel-dark: #996799;
+    --color-pink-pastel-darker: #852585;
+    --color-pink-pastel-pale: #E59AE5;
+    --color-pink-pastel-paler: #E5AEE5;
+    --color-pink-pastel-max-pale: #F2D2F2;
+
+    --color-blue-pastel-main: #8585D3;
+    --color-blue-pastel-dark: #72729E;
+    --color-blue-pastel-darker: #2B2B89;
+    --color-blue-pastel-pale: #A8A8E9;
+    --color-blue-pastel-paler: #BABAE9;
+    --color-blue-pastel-max-pale: #D9D9F4;
 }
 
-div.page {
+body {
     background-color: white;
 }
 
+div.page {
+    /* background-color: var(--color-blue-pastel-max-pale); */
+}
+
+
 /* Навигация */
+.container-nav-profile {
+    background-color: var(--color-violet-pastel-pale) !important;
+}
+
 .profile-nav-tabs {
-    background-color: var(--color-ex-violet-pale);
     padding-left: 5px;
     padding-top: 5px;
     padding-bottom: 1px;
@@ -31,54 +59,195 @@ div.page {
 
 .profile-nav-item {
     margin-right: 5px;
-    background-color: var(--color-ex-violet-main) !important;
-    border-radius: 5px;
+    background-color: var(--color-violet-pastel-main) !important;
+    border-radius: 5px 5px 0px 0px;
+}
+
+.profile-nav-item:hover {
+    /* color: var(--color-violet-darker);
+    background-color: var(--color-violet-pastel-max-pale);
+    border-color: white;
+    border-width: 1px; */
 }
 
 .profile-nav-link {
 }
 
 .profile-nav-link:hover {
-    color: var(--color-ex-violet-darker);
-    background-color: var(--color-ex-violet-max-pale);
+    color: black !important;
+    background-color: var(--color-violet-pastel-max-pale);
     border-color: white;
     border-width: 1px;
-    border-bottom: none;
-    /* border-radius: 5px; */
 }
 
 .profile-nav-link.active {
-    color: var(--color-ex-violet-darker) !important;
+    color: var(--color-violet-pastel-darker) !important;
     background-color: white !important;
     border-color: white !important;
     border-width: 3px;
     border-bottom: none;
-    /* border-radius: 5px; */
+}
+
+/* Общее */
+.profile__title {
+    margin-top: 20px;
+}
+
+/* Календарь */
+.content {
+    background: none;
+}
+
+.calendar-content {
+    border: var(--color-blue-pastel-dark) solid 3px;
+    border-radius: 5px;
+}
+
+.calendar-container {
+    max-width: max-content;
+    max-height: max-content;
+    min-width: fit-content;
+    min-height: fit-content;
+    background-color: var(--color-violet-pastel-pale);
+    border-right: var(--color-blue-pastel-dark) solid 3px;
+    padding: auto;
+}
+
+.calendar {
+    background-color: var(--color-blue-pastel-paler);
+    border-radius: 20px;
+}
+
+.left-button, .right-button {
+    color: var(--color-blue-pastel-main) !important;
+}
+
+.left-button:hover, .right-button:hover {
+    transform: scale(1.1);
+    color: var(--color-blue-pastel-dark) !important;
+}
+
+.year-header {
+    margin: auto;
+    background-color: var(--color-blue-pastel-paler);
+}
+
+.months-table {
+    background-color: var(--color-blue-pastel-paler);
+}
+
+.month {
+    color: white;
+}
+
+.month:hover {
+    color: var(--color-pink-pastel-dark);
+}
+
+.active-month {
+    font-weight: bolder;
+    color: var(--color-pink-pastel-darker) !important;
+}
+
+.days-table {
+    background-color: var(--color-blue-pastel-max-pale);
+
+    border: var(--color-blue-pastel-paler) solid 5px;
+    border-top: none;
+    border-bottom: none;
+
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.dates-table {
+    background-color: var(--color-blue-pastel-max-pale);
+
+    border: var(--color-blue-pastel-paler) solid 5px;
+    border-top: none;
+
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.table-date {
+    border-radius: 20%;
+}
+
+.table-date:hover {
+    transform: scale(1.1);
+    border-color: var(--color-blue-pastel-dark) !important;
+}
+
+.active-date {
+    transform: none !important;
+    background-color: var(--color-blue-pastel-darker);
+}
+
+.event-date {
+    overflow: hidden !important;
+
+    background-color: var(--color-blue-pastel-main);
+    border-color: var(--color-blue-pastel-main);
+}
+
+.event-date::after {
+    /* left: auto;
+    border: var(--color-blue-pastel-darker) solid 2px; */
+    content: "";
+    position: absolute;
+    top: -85%;
+    left: 55%;
+    height: 50px;
+    width: 50px;
+    border-radius: 0%;
+    border: 2px solid var(--color-blue-pastel-main);
+    transform: rotate(45deg);
+}
+
+.event-date-warn {
+    background-color: var(--color-blue-pastel-main);
+    border-color: var(--color-blue-pastel-main);
+}
+
+.event-date.active-date {
+    background-color: var(--color-blue-pastel-darker);
+    border-color: var(--color-blue-pastel-darker);
+}
+
+.event-date.active-date::after {
+    border-color: var(--color-blue-pastel-darker);
 }
 
 
+.events-container {
+    background-color: var(--color-blue-pastel-max-pale);
+}
 
+.events-container {
+    overflow: hidden;
+}
+
+/* Уведомления */
 h4.notification-title {
     color: white;
 }
 
-
-/* Уведомления */
 div.notifications {
-    background-color: var(--color-brown-dark);
+    background-color: var(--color-violet-pastel-dark);
 }
 
 div.notification {
-    background-color: var(--color-brown-pale);
-    color: var(--color-brown-darker)
+    background-color: var(--color-violet-pastel-pale);
+    color: var(--color-violet-pastel-darker)
 }
 
 a.ex_name {
-    color: var(--color-brown-darker);
+    color: var(--color-violet-pastel-darker);
     text-decoration: none;
     font-weight: bold;
 }
 
 a.ex_name:hover {
-    color: var(--color-white-warm);
+    color: var(--color-violet-pastel-pale);
 }
