Rework styles & add requirements.txt

--- a/lang_school/exercises_words/static/css/exercise.css
+++ b/lang_school/exercises_words/static/css/exercise.css
@@ -9,12 +9,12 @@
   --color-brown-darker: #371805;
 
   /* Exersices */
-  /* --color-ex-violet-main: #8106A9;
+  --color-ex-violet-main: #8106A9;
   --color-ex-violet-dark: #68237F;
   --color-ex-violet-darker: #54026E;
   --color-ex-violet-pale: #AF3BD4;
   --color-ex-violet-paler: #B964D4;
-  --color-ex-violet-max-pale: #D9A6EA; */
+  --color-ex-violet-max-pale: #D9A6EA;
 
   --color-violet-pastel-main: #A17DD0;
   --color-violet-pastel-dark: #816D9C;
