--- a/lang_school/users/templates/users/profile.html
+++ b/lang_school/users/templates/users/profile.html
@@ -39,7 +39,7 @@
 								</div>
 							</div>
 							<div class="row row-cols-2">
-								<div class="col-12 col-xl-9  calendar-col">
+								<div class="col-12 col-xl-9 calendar-col">
 									<div class="content w-100 calendar-content">
 										<div class="calendar-container">
 											<div class="calendar"> 
@@ -171,7 +171,7 @@
 			</div>
 			<div class="row justify-content-center">
 				<div class='col-lg-auto my-3'>
-					<img src="http://placehold.it/400x500/2c3e50/3498db&text=User photo" class="bd-placeholder-img" width="200" height="250" alt="User photo">
+					<img class='avatar' src="{% static "images/default_avatar.png" %}" alt="User photo">
 				</div>
 				<div class="col my-3">
 					<div class=''>
