--- a/lang_school/users/static/css/sign_up.css
+++ b/lang_school/users/static/css/sign_up.css
@@ -7,6 +7,35 @@
     --color-creme: #eec8a5;
     --color-brown-dark: #693909;
     --color-brown-darker: #371805;
+
+    /* Exersices */
+    /* --color-ex-violet-main: #8106A9;
+    --color-ex-violet-dark: #68237F;
+    --color-ex-violet-darker: #54026E;
+    --color-ex-violet-pale: #AF3BD4;
+    --color-ex-violet-paler: #B964D4;
+    --color-ex-violet-max-pale: #D9A6EA; */
+    
+    --color-violet-pastel-main: #A17DD0;
+    --color-violet-pastel-dark: #816D9C;
+    --color-violet-pastel-darker: #512987;
+    --color-violet-pastel-pale: #C0A2E8;
+    --color-violet-pastel-paler: #CBB5E8;
+    --color-violet-pastel-max-pale: #E3D6F3;
+
+    --color-pink-pastel-main: #CC73CC;
+    --color-pink-pastel-dark: #996799;
+    --color-pink-pastel-darker: #852585;
+    --color-pink-pastel-pale: #E59AE5;
+    --color-pink-pastel-paler: #E5AEE5;
+    --color-pink-pastel-max-pale: #F2D2F2;
+
+    --color-blue-pastel-main: #8585D3;
+    --color-blue-pastel-dark: #72729E;
+    --color-blue-pastel-darker: #2B2B89;
+    --color-blue-pastel-pale: #A8A8E9;
+    --color-blue-pastel-paler: #BABAE9;
+    --color-blue-pastel-max-pale: #D9D9F4;
 }
 
 html, body {
@@ -16,7 +45,9 @@ html, body {
 }
 
 body {
-    background-color: var(--color-white-warm);
+    background-image: url('../images/auth_background.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container-table {
@@ -30,28 +61,37 @@ body {
 }
 
 .auth-card, .sign-up-card {
-    background-color: var(--color-brown-dark);
+    background-color: var(--color-blue-pastel-pale);
+    border: var(--color-blue-pastel-dark) solid 5px;
+    border-radius: 15px;
+}
+
+.logo {
+    height: 100px;
+    width: 100px;
 }
 
 .btn {
+    width: max-content;
     color: white;
-    background-color: var(--color-brown);
-    border: var(--color-brown-dark) solid 1px;
+    background-color: var(--color-violet-pastel-dark);
+    border: var(--color-violet-pastel-darker) solid 1px;
 }
 
 .btn:hover {
-    background-color: var(--color-brown-pale);
+    color: black !important;
+    background-color: var(--color-violet-pastel-paler);
+    border-color: var(--color-violet-pastel-darker);
 }
 
 label, span.helptext {
-    color: white;
+    color: black;
 }
 
 ul.errorlist {
-    font-weight: bold;
-    padding: 15px 10px 15px 10px;
+    padding: 5px;
     list-style-type: none;
-    color: black;
-    background-color: var(--color-brown-paler);
-    border: red solid 3px;
+    color: white;
+    background-color: var(--color-violet-pastel-darker);
+    border: var(--color-blue-pastel-darker) solid 3px;
 }
