--- a/lang_school/users/templates/users/auth.html
+++ b/lang_school/users/templates/users/auth.html
@@ -18,6 +18,7 @@
 
         <!-- Font Awesome CSS-->
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <link rel="stylesheet" href="{% static 'css/auth.css' %}">
     </head>
     <body class=''>
@@ -27,27 +28,34 @@
                     <form method='POST'>
                         {% csrf_token %}
                         <a href={% url "" %}>
-                            <img src="{% static "main/images/logo_mini.png" %}" class="pt-3" alt="logo">
+                            <img src="{% static "main/images/logo.png" %}" class="logo my-3" alt="logo">
                         </a>
                         {% comment %} <img src="http://placehold.it/150x150/2c3e50/3498db&text=Logo" class="shadow" alt="logo"> {% endcomment %}
                         <div class="form-floating pb-2">
                             <input type="login" name='login' class="form-control" id="floatingInput" placeholder="login">
-                            <label for="floatingInput">Login</label>
+                            <label for="floatingInput">Логин</label>
                         </div>
                         <div class="form-floating">
                             <input type="password" name='password' class="form-control" id="floatingPassword" placeholder="Password">
-                            <label for="floatingPassword">Password</label>
+                            <label for="floatingPassword">Пароль</label>
                         </div>
+                        {% if error %}
+                            <div>
+                                <ul class="errorlist my-2">
+                                    <li>❌ {{ error }} ❌</li>
+                                </ul>
+                            </div>
+                        {% endif %}
                         <div class="checkbox my-2 text-light">
                             <label>
-                                <input class='text' type="checkbox" value="remember-me"> Remember me
+                                <input class='text' type="checkbox" value="remember-me"> Запомнить меня
                             </label>
                         </div>
-                        <button class="w-100 btn btn-lg shadow" type="submit">Sign in</button>
-                        <a class='btn btn-lg mt-2 shadow' href="{% url 'reset_password' %}">
+                        <button class="w-100 btn btn-lg shadow" type="submit">Войти</button>
+                        <a class='btn mt-3 shadow' href="{% url 'reset_password' %}">
                             Забыли пароль?
                         </a>
-                        <p class="mt-5 text-light">Lang School Name</p>
+                        <p class="mt-5 text-dark">Verbal Voyager</p>
                     </form>
                 </div>
             </div>
